# goit-PW-hw-09

dz_9/: authors.json  main.py  model.py  pyproject.toml
